web-app/2-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: video-call-prod
spec:
  type: ClusterIP  
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: video-call-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # Thay bằng Image Backend của bạn
          image: asia-southeast1-docker.pkg.dev/helical-chemist-471003-u9/video-call-repo/video-call-backend:260116-2 
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config/application.properties
              subPath: application.properties
      volumes:
        - name: config-volume
          configMap:
            name: backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: video-call-prod
spec:
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: video-call-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # Thay bằng Image Frontend của bạn
          image: asia-southeast1-docker.pkg.dev/helical-chemist-471003-u9/video-call-repo/video-call-frontend:260115
          ports:
            - containerPort: 80
